# 100knocks-preprocess

./: .flake8  .gitignore  .jupyter-nbqa.toml  Pipfile  environment.yml  install.R  pyproject.toml
.github/: dependabot.yml
.github/linters/: .python-lint  trivy-secret.yaml  trivy.yaml
.github/workflows/: dockle.yml  fix_env.yml  format.yml  run_notebooks.yml  super-linter.yml
docker/work/: preprocess_knock_Python.ipynb  preprocess_knock_R.ipynb  preprocess_knock_SQL.ipynb
docker/work/answer/: ans_preprocess_knock_Python.ipynb  ans_preprocess_knock_SQL.ipynb
docker/work/data/: customer.csv
dockerfiles/notebook/: Dockerfile
super-linter-output/: super-linter-summary.md
