[project]
name = "100knocks-preprocess"
version = "2.1.0"
description = "データサイエンス100本ノック（構造化データ加工編）"
requires-python = "==3.11"
dependencies = ["jupysql==0.7.2", "psycopg2==2.9.3", "imbalanced-learn==0.12.3", "SQLAlchemy==1.4.46", "pandas==1.5.3", "numpy==1.24.3", "scikit-learn==1.5.0", "python-dateutil==2.8.2", "ipython==8.16.1", ]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
